# c-study

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  CMake编译流程总结.md  CROSS_COMPILE.md  Dockerfile  README.md  Ubuntu-Docker发布方案.md  main.cpp  toolchain-linux-x64.cmake
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: toolchain-linux-x86_64.cmake
cmake/toolchains/: linux-x64.cmake
deploy/: Dockerfile  docker-compose.yml
docs/superpowers/plans/: 2026-06-08-cross-compile-docker-ubuntu24.md  2026-06-09-dji-mqtt-osd-monitor.md
docs/superpowers/specs/: 2026-06-09-dji-mqtt-osd-monitor-design.md
scripts/: build-and-run.ps1  build-and-run.sh  build_linux.ps1  build_win.ps1
src/: calculator.cpp  calculator.h  hello.cpp  hello.hpp  logger.h  main.cpp
src/core/: ConfigStore.cpp  ConfigStore.h  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h  OsdData.h  TopicManager.cpp  TopicManager.h
src/mqtt/: MqttClientManager.cpp  MqttClientManager.h
src/resources/: config.json
src/ui/: ConfigDialog.cpp  ConfigDialog.h  DeviceTreeWidget.cpp  DeviceTreeWidget.h  MainWindow.cpp  MainWindow.h  OsdPanel.cpp  OsdPanel.h  PublishPanel.cpp  PublishPanel.h  RawJsonPanel.cpp  RawJsonPanel.h  TopicEditDialog.cpp  TopicEditDialog.h
